[package]
name = "tunio_udp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tunio = "0.3.0"
tokio = { version = "1.19.2", features = ["full"] }
etherparse = "0.13.0"
futures = "0.3.28"
env_logger = "0.10.0"
netconfig = "0.4.0"